--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,4 @@ customImages
 
 # End of https://www.toptal.com/developers/gitignore/api/swift
 
+FirebaseHometask.xcodeproj/project.xcworkspace/xcuserdata/aykhanhajiyev.xcuserdatad/UserInterfaceState.xcuserstate
